# RubikCubeApp

./: .gitignore  Makefile  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.override.yml
.devcontainer/scripts/: postCreateScript.sh
.github/workflows/: auto-merge-version.yml  ci.yml  fix-development-to-main.yml  main-to-release.yml  release-merge.yml  tag-on-merge.yml  tag-version.yml  test-pr.yml  versioning.yml
client/: app.py
client/static/: asyncImporters.js  config.js  main.js  script.js
client/static/load/: index.js  objLoader.js  plyLoader.js  stlLoader.js
client/static/scene/: cameraSetup.js  controlsSetup.js  index.js  lightSetup.js  rendererSetup.js  sceneSetup.js  setupMesh.js  setupObject.js
client/templates/: index.html
secret/: .env.dev  .env.prod  entrypoint.sh  env_settings_test.sh
src/: main.py  x11check.py
src/utils/converter_utils/: stl_to_ply.py
src/utils/math_utils/: arithmetic_operations.py  functional.py  geometric.py  numerical.py  statistical.py  transformations.py
src/utils/point_utils/: advance_point_functions.py  base_point_functions.py
test/: run_tests.sh
tests/: cube.py  test_main.py
tests/utils/converter_utils/: test_stl_to_ply.py
tests/utils/point_utils/: test_advance_point_functions.py  test_base_point_functions.py
