[tool.poetry]
name = "src"
version = "0.1.0"
description = "Docker + Poetry + DevContainer setup with Compose"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pylint = "^3.0"
open3d = "^0.19.0"
numpy = "^2.2.3"
glfw = "^2.8.0"
flask = "^3.1.0"
setuptools = "^75.8.0"
pytest-cov = "^6.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.0"
pytest = "^7.4"
pylint = "^3.0"

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'

[tool.pytest.ini_options]
python_files = "test_*.py"
addopts = "--maxfail=3 --disable-warnings"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
